--- a/vignettes/refs.bib
+++ b/vignettes/refs.bib
@@ -322,6 +322,16 @@
   doi = {j.jeconom.2016.06.002},
 }
 
+@Article{Lanne+Nyberg:2016,
+  author = {M. Lanne and H. Nyberg},
+  title = {Generalized Forecast Error Variance Decomposition for Linear and Nonlinear Multivariate Models},
+  year = {2016},
+  journal = {Oxford Bulletin of Economics and Statistics},
+  volume = {78},
+  number = {4},
+  pages = {595--603},
+  doi = {10.1111/obes.12125},
+}
 
 @Article{Lanne+Saikkonen:2003,
   author = {M. Lanne and P. Saikkonen},
